@@ -3,5 +3,6 @@
 
 extern void get_sdl_mouse(int32 values[]);
 extern void sdl_mouse_onoff(int state);
+extern void set_wintitle(char *title);
 
 #endif
